RESOLVED FIXED87281
fixes a memory leak in FontHolder
https://bugs.webkit.org/show_bug.cgi?id=87281
Summary fixes a memory leak in FontHolder
Robin Dunn
Reported 2012-05-23 10:37:35 PDT
Created attachment 143593 [details] patch fixes a memory leak in FontHolder
Attachments
patch (936 bytes, patch)
2012-05-23 10:37 PDT, Robin Dunn
kevino: review+
kevino: commit-queue-
Kevin Ollivier
Comment 1 2012-05-23 11:23:59 PDT
Landed in r118209, thanks!
Note You need to log in before you can comment on or make changes to this bug.