[wx] Fix memory leak in FontHolder. https://bugs.webkit.org/show_bug.cgi?id=87281

Reviewed by Kevin Ollivier.


Canonical link: https://commits.webkit.org/105016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118209 268f45cc-cd09-0410-ab3c-d52691b4dbfc